# big-fiubrother-core

./: .gitignore  README.md  requirements.txt  setup.py  sv_fiuba.pkl
big_fiubrother_core/: __init__.py  abstract_message.py  application_setup.py  async_task.py  camera_message.py  camera_mock.py  clustering_message.py  face_classification_worker.py  face_detection_message.py  face_detection_worker.py  face_embedding_worker.py  frame_display_mock.py  image_processing_helper.py  signal_handler.py  stoppable_thread.py  unknown_face_message.py
big_fiubrother_core/config/: classification_worker_config.yaml  detection_worker_config.yaml  embedding_worker_config.yaml  frame_display_config.yaml
big_fiubrother_core/containers/: __init__.py  async_container.py  container.py  process_container.py  thread_container.py
big_fiubrother_core/db/: __init__.py  analyzed_video_chunk.py  database.py  face.py  face_embedding.py  frame.py  frame_process.py  helper.py  person.py  processed_frame.py  processed_video_chunk.py  video_chunk.py  video_chunk_process.py
big_fiubrother_core/message_clients/: __init__.py
big_fiubrother_core/messages/: __init__.py  abstract_message.py  analyzed_video_chunk_message.py  batch_message.py  camera_message.py  clusters_message.py  display_frame_message.py  face_classification_message.py  face_detection_message.py  face_embedding_message.py  frame_message.py  (+6 more)
modules/video_storage/: README.md  setup.cfg
modules/video_storage/big_fiubrother_core_video_storage/: __init__.py  s3_client.py  tracing.py  video_chunks.py
shovel/: db.py
(+85 files in other folders)
