[metadata]
name = big-fiubrother-core-video-storage
version = 0.0.1
author = Eduardo Neira
author_email = aneira@fi.uba.ar
description = Storage for video chunks for big-fiubrother applications to use.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BigFiuBrother/big-fiubrother-core
project_urls =
    Bug Tracker = https://github.com/BigFiuBrother/big-fiubrother-core/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE
install_requires =
    minio


[options]
packages = find:
python_requires = >=3.6
